--- a/style.css
+++ b/style.css
@@ -6,7 +6,12 @@ body {
     padding: 0;
     scroll-behavior: smooth;
   }
-  
+
+  #top {
+  position: absolute;
+  top: 0;
+}
+
   header {
     background-color: #000000;
     padding: 20px;
